fix: fix swagger loading; delete unused files
